<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/back"
    tools:context=".ui.login.LoginActivity">


    <EditText
        android:id="@+id/username"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="24dp"
        android:background="@color/cardview_dark_background"

        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="269dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"

        android:background="@color/cardview_dark_background"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />
    <!-- Logo -->

    <!-- Ellipse 1 -->
    <!-- PodShare -->

    <!-- Login -->

    <TextView
        android:id="@+id/speak_your_"
        android:layout_width="232dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="3sp"
        android:text="@string/speak_your_"
        android:textAppearance="@style/speak_your_"
        android:translationY="-1.57sp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="155dp" />

    <View
        android:id="@+id/logo"
        android:layout_width="284dp"
        android:layout_height="152dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#00000000"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="-17dp" />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="285dp"
        android:layout_height="153dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ellipse_1"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="-15dp" />

    <View
        android:id="@+id/podshare"
        android:layout_width="137dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/logo"
        android:gravity="top"
        android:translationY="-1.57sp"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="546dp" /><![CDATA[

    android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Button"
         tools:layout_editor_absoluteX="143dp"
         tools:layout_editor_absoluteY="564dp" />

    ]]>

    <TextView
        android:id="@+id/don_t_have_"
        android:layout_width="259dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="7sp"
        android:text="@string/don_t_have_"
        android:textAppearance="@style/don_t_have_"
        android:textStyle="bold"
        android:translationY="-3.7sp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="621dp" />

    <TextView
        android:id="@+id/forgot"
        android:layout_width="125dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:gravity="top"
        android:lineSpacingExtra="7sp"
        android:text="@string/forgot"
        android:textAppearance="@style/don_t_have_"
        android:textStyle="bold"
        android:translationY="-3.7sp"
        tools:layout_editor_absoluteX="179dp"
        tools:layout_editor_absoluteY="502dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
